--- a/mystyle.css
+++ b/mystyle.css
@@ -36,7 +36,7 @@
 }
 .bg { 
   /* The image used */
-  background-image: url("bck1.png");
+  background-image: url("s2.jpg");
 
   /* Full height */
   height: 100%; 
